# contracts

./: .env.example  Cargo.toml  INCIDENT_AND_RESOURCE_MANAGEMENT.md  README.md  SECURITY.md  SECURITY_IMPROVEMENTS.md  TTL_POLICY.md  task242_test.ipynb
contracts/access-control/: README.md
contracts/access-control/src/: lib.rs  test.rs
contracts/allergy-management/: Cargo.toml
contracts/allergy-management/src/: lib.rs  storage.rs  test.rs  types.rs  validation.rs
contracts/allergy-tracking/: IMPLEMENTATION_CHECKLIST.md
contracts/allergy-tracking/src/: lib.rs  test.rs
contracts/allergy-tracking/tests/: security_audit.rs
contracts/care-plan/: Cargo.toml  README.md
contracts/care-plan/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/clinical-guideline/: README.md
contracts/clinical-trial/: Cargo.toml  README.md
contracts/clinical-trial/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/dental-records/: Cargo.toml  README.md
contracts/doctor-registry/: README.md
contracts/emergency-medical-info/: README.md
contracts/financial-records/: README.md
contracts/hai-tracking/: Cargo.toml  README.md
contracts/hai-tracking/src/: lib.rs  test.rs
contracts/health-records/: Cargo.toml  README.md
contracts/health-records/src/: lib.rs  test.rs
contracts/healthcare-analytics/: README.md
contracts/healthcare-credentialing/: README.md
contracts/hospital-discharge-management/: Cargo.toml  README.md
contracts/hospital-registry/: README.md
contracts/imaging-radiology/: Cargo.toml  README.md
contracts/imaging-radiology/src/: lib.rs  test.rs
contracts/immunization-registry/: README.md
contracts/insurer-registry/: README.md
contracts/lab-management/: README.md
contracts/medical-claims/: README.md
contracts/medical-device-tracking/: README.md
contracts/mental-health/: README.md
contracts/multisig-governance/: Cargo.toml  README.md
contracts/nutrition-care-management/: Cargo.toml  README.md
contracts/pacs-integration/: Cargo.toml  README.md
contracts/pacs-integration/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/patient-registry/: Cargo.toml  README.md
contracts/patient-registry/fuzz/: Cargo.toml
contracts/patient-registry/src/: lib.rs  merkle.rs  test.rs  validation.rs
contracts/patient-registry/test_snapshots/test/: test_grant_access_and_add_medical_record.1.json  test_is_patient_registered.1.json  test_register_and_get_patient.1.json  test_unauthorized_doctor_cannot_add_record.1.json  test_update_patient.1.json
contracts/patient-vitals/: README.md
contracts/prenatal-pediatric/: Cargo.toml  README.md
contracts/prescription-management/: Cargo.toml  README.md
contracts/prior-authorization/: Cargo.toml  README.md
contracts/prior-authorization/src/: lib.rs  storage.rs  test.rs  test_enhanced.rs  types.rs
contracts/provider-registry/: README.md
contracts/referral/: README.md
contracts/shared/: Cargo.toml
contracts/src/: lib.rs  test.rs
contracts/telemedicine/: README.md
contracts/ttl-config/: Cargo.toml
contracts/upgrade-governance/: Cargo.toml  README.md
contracts/zk-eligibility/: Cargo.toml  README.md
contracts/zk-eligibility-verifier/: README.md
(+78 files in other folders)
