[package]
name = "pacs-integration"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
shared-contracts = { path = "..", package = "Contracts" }
soroban-sdk = { workspace = true }
ttl-config = { path = "../ttl-config" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
